crates/grafana-plugin-sdk-macros/tests/ui-fail/missing_services.stderr
error: at least one service must be provided, e.g. `#[grafana_plugin_sdk::main(services(data))]`
 --> tests/ui-fail/missing_services.rs:7:5
  |
7 |     #[grafana_plugin_sdk::main]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `grafana_plugin_sdk::main` (in Nightly builds, run with -Z macro-backtrace for more info)
